--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.0
-flask-cors==4.0.0
-flask-caching==2.1.0
-openai==1.12.0
-requests==2.31.0
-python-multipart==0.0.6
-PyMuPDF==1.23.8
-Werkzeug==3.0.1
+Flask>=2.3.0
+Flask-CORS>=4.0.0
+Flask-Caching>=2.1.0
+openai>=1.12.0
+requests>=2.31.0
+python-multipart>=0.0.6
+PyMuPDF>=1.23.0
+Werkzeug>=3.0.0
 
